# openGL-cpp-test

./: .clangd  CMakeCache.txt  CMakeList.txt  CMakeLists.txt  CMakePresets.json  Makefile  cmake_install.cmake  compile_commands.json  main  main.cpp  opengl_cpp  push.sh  template.md
.cache/clangd/index/: _.cpp.9E7A4F3E4898B1F4.idx  main.cpp.E67103531E7E0AEE.idx
include/utils/: read.h  shader.h
main.dSYM/Contents/Resources/DWARF/: main
main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
src/: _.cpp  main  main.cpp
src/sea/: .frag  .vert  AA算法.md  CMakeLists.txt  sea.cpp  trace算法.md  wave算法.md
src/sea/build_web/: out_web.html  out_web.js  out_web.wasm
src/sea/utils/: read.cpp  shader.cpp  shader.h
