cmake_minimum_required(VERSION 3.5.0)
project(opengl_cpp VERSION 0.1.0 LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED True)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_CXX_COMPILER "/usr/bin/clang++")
include_directories(${CMAKE_SOURCE_DIR}/utils)
include_directories(/opt/homebrew/include)
link_directories(/opt/homebrew/opt/glew/lib)
link_directories(/opt/homebrew/opt/glfw/lib)
file(GLOB UTILS ${CMAKE_SOURCE_DIR}/utils/*.cpp)
add_executable(out ./sea.cpp ${UTILS}) 
target_link_libraries(out glfw glew "-framework OpenGL")
